--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -1,9 +1,5 @@
 /* Generales */
 
-* {
-  font-family: Montserrat;
-}
-
 /* Fonts */
 
 .light {
@@ -11,35 +7,33 @@
 }
 
 .bold {
-  font-weight: 600!important;
+  font-weight: 600 !important;
 }
 
 /* Colors */
 
 .bg-gray2 {
-  background-color: rgb(187, 187, 187)!important;
+  background-color: rgb(187, 187, 187) !important;
 }
 
 .font-white {
-  color: white!important;
+  color: white !important;
 }
 
+/* Spinner */
 
-
-  /* Spinner */
-
-  .spinner-container {
-    position: fixed; /* Se mantiene fijo en la pantalla */
-    top: 0;
-    left: 0;
-    width: 100%; /* Cubre todo el ancho de la pantalla */
-    height: 100%; /* Cubre todo el alto de la pantalla */
-    display: flex; /* Usa Flexbox para el centrado */
-    justify-content: center; /* Centra horizontalmente */
-    align-items: center; /* Centra verticalmente */
-    backdrop-filter: blur(5px);
-    z-index: 9999;
-  }
+.spinner-container {
+  position: fixed; /* Se mantiene fijo en la pantalla */
+  top: 0;
+  left: 0;
+  width: 100%; /* Cubre todo el ancho de la pantalla */
+  height: 100%; /* Cubre todo el alto de la pantalla */
+  display: flex; /* Usa Flexbox para el centrado */
+  justify-content: center; /* Centra horizontalmente */
+  align-items: center; /* Centra verticalmente */
+  backdrop-filter: blur(5px);
+  z-index: 9999;
+}
 
 /* Navbar */
 
@@ -53,7 +47,7 @@
 }
 
 .nav-link-menu {
-  color: white!important;
+  color: white !important;
 }
 
 /* Home */
@@ -63,7 +57,7 @@
 }
 
 .custom-option-title {
-  color: #181818!important;
+  color: #181818 !important;
 }
 
 /* Footer */
@@ -77,7 +71,7 @@
 }
 
 .footer-logo {
-  max-width: 130px!important;
+  max-width: 130px !important;
 }
 
 .creditos-container {
@@ -92,142 +86,140 @@
 }
 
 .creditos {
-  color: white!important;
+  color: white !important;
 }
 
 /* E-Commerce */
 
-  /* WhatsApp Box */
+/* WhatsApp Box */
 
-  .whatsapp-box {
-    position: fixed;
-    bottom: 20px;
-    left: 20px;
-    width: 3%;
-    z-index: 1000;
-  }
+.whatsapp-box {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  width: 3%;
+  z-index: 1000;
+}
 
-  .whatsapp-box-img {
-    width: 100%;
-    height: auto;
-  }
+.whatsapp-box-img {
+  width: 100%;
+  height: auto;
+}
 
-  /* Cart */
+/* Cart */
 
-    .cart-box {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      width: 3%;
-      padding: 7px;
-      z-index: 1000;
-      background-color: white;
-      border-radius: 10px;
-      -webkit-box-shadow: 4px 7px 16px -1px rgba(0,0,0,0.39);
-      -moz-box-shadow: 4px 7px 16px -1px rgba(0,0,0,0.39);
-      box-shadow: 4px 7px 16px -1px rgba(0,0,0,0.39);
-    }
+.cart-box {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 3%;
+  padding: 7px;
+  z-index: 1000;
+  background-color: white;
+  border-radius: 10px;
+  -webkit-box-shadow: 4px 7px 16px -1px rgba(0, 0, 0, 0.39);
+  -moz-box-shadow: 4px 7px 16px -1px rgba(0, 0, 0, 0.39);
+  box-shadow: 4px 7px 16px -1px rgba(0, 0, 0, 0.39);
+}
 
-    .cart-box-img {
-      width: 100%;
-      height: auto;
-    }
+.cart-box-img {
+  width: 100%;
+  height: auto;
+}
 
-    .offcanvas-cart-footer {
-      flex-direction: row;
-      align-self: center;
-      margin-bottom: 20px;
-      width: 80%;
-      position: absolute;
-      bottom: 0;
-    }
+.offcanvas-cart-footer {
+  flex-direction: row;
+  align-self: center;
+  margin-bottom: 20px;
+  width: 80%;
+  position: absolute;
+  bottom: 0;
+}
 
-    .offcanvas-cart-button {
-      margin-top: 10px;
-      width: 100%;
-    }
+.offcanvas-cart-button {
+  margin-top: 10px;
+  width: 100%;
+}
 
-    .cart-product-list {
-    overflow-y: auto;
-    max-height: 60vh;
-  }
+.cart-product-list {
+  overflow-y: auto;
+  max-height: 60vh;
+}
 
-  .cart-product-item {
-      display: flex;
-      align-items: center;
-      margin-bottom: 1rem;
-  }
+.cart-product-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+}
 
-  .cart-product-img {
-      width: 100px;
-      height: auto;
-  }
+.cart-product-img {
+  width: 100px;
+  height: auto;
+}
 
-  .cart-product-variants {
-    padding-inline: 10px;
-  }
+.cart-product-variants {
+  padding-inline: 10px;
+}
 
-  .product-card-text {
-      flex: 1;
-  }
+.product-card-text {
+  flex: 1;
+}
 
-  .cart-total-price {
-    text-align: center;
-  }
+.cart-total-price {
+  text-align: center;
+}
 
-  .add-to-cart-img {
-    width: 60%;
-  }
+.add-to-cart-img {
+  width: 60%;
+}
 
+/* Checkout */
 
-  /* Checkout */
+.sabores-carrito {
+  font-size: 10px;
+  line-height: 1.4;
+}
 
-  .sabores-carrito {
-    font-size: 10px;
-    line-height: 1.4
-  }
+/* Store */
 
-  /* Store */
+.category-card-text {
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  width: 100%;
+  text-align: center;
+}
+.category-card-text h5 {
+  color: white;
+  border-radius: 0.25rem;
+}
 
-  .category-card-text {
-    position: absolute;
-    bottom: 10px;
-    left: 0;
-    width: 100%;
-    text-align: center;
-  }
-  .category-card-text h5 {
-    color: white;
-    border-radius: 0.25rem;
-  }
+.card-category {
+  box-shadow: none !important;
+  background-color: transparent !important;
+}
 
-  .card-category {
-    box-shadow: none!important;
-    background-color: transparent!important;
-  }
+.category-name {
+  font-size: 1.5rem;
+}
 
-  .category-name {
-    font-size: 1.5rem;
-  }
+.title-container {
+  text-align: center;
+}
 
-  .title-container {
-    text-align: center;
-  }
+/* Product */
 
-  /* Product */
+.card-product {
+  box-shadow: none !important;
+  background-color: transparent !important;
+  cursor: pointer;
+}
 
-  .card-product {
-    box-shadow: none!important;
-    background-color: transparent!important;
-    cursor: pointer;
-  }
+.product-card-text {
+  text-align: center;
+  margin-top: 8px;
+}
 
-  .product-card-text {
-    text-align: center;
-    margin-top: 8px;
-  }
-
-  .product-name {
-    margin-bottom: 5px;
-  }
-
+.product-name {
+  margin-bottom: 5px;
+}
