--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -63,7 +63,7 @@
 /* Footer */
 
 .footer-container {
-  position: relative;
+  position: fixed;
   left: 0;
   bottom: -16;
   background-color: #181818;
@@ -207,7 +207,7 @@
   text-align: center;
 }
 
-/* Product */
+/* Products */
 
 .card-product {
   box-shadow: none !important;
@@ -223,4 +223,15 @@
 .product-name {
   margin-bottom: 5px;
 }
+
+
+
+
+/* Backoffice - Products */
+
+.datatables-products p {
+  padding: 0;
+  margin: 0;
+}
+
 
