--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -244,11 +244,32 @@
 
 .add-to-cart-img {
   width: 60%;
+  border-radius: 20px;
 }
 
 .shop-product-image {
   border-radius: 20px;
   aspect-ratio: 1/1;
+}
+
+.quantity-selector-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.quantity-selector-container .btn {
+  height: 100%;
+}
+
+.quantity-show {
+  height: 100%;
+  max-width: 50px;
+  text-align: center;
+  border: 0px;
+  color: #181818;
+  margin: 0px 5px;
+  border-radius: 2px;
 }
 
 /* Checkout */
@@ -482,5 +503,16 @@ tr.odd {
 
 .animated-card {
   animation: slideIn 0.6s ease-in-out;
+}
+
+.cart-product-item {
+  position: relative;
+}
+
+.cart-product-item .btn-link {
+  color: #dc3545;
+  font-size: 2em!important;
+  text-decoration: none;
+  margin: 0px!important;
 }
 
